N°4460 - Fix skeletons placeholders contrast issue in Darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -192,7 +192,12 @@ $ibo-activity-panel--tab-toolbar--background-color: $ibo-activity-panel--tab-tog
 $ibo-caselog-entry-form--background-color: $ibo-activity-panel--tab-toolbar--background-color;
 $ibo-object-details--tag--separator--background-color: $ibo-color-grey-300;
 
+$ibo-skeleton-start-color: $ibo-color-grey-500;
+$ibo-skeleton-stop-color: $ibo-color-grey-400;
+
+$ibo-tab--temporary-remote-content--button--color: $ibo-color-grey-200;
 $ibo-tab--temporary-remote-content--button--hover--color: $ibo-color-grey-200;
+$ibo-tab--temporary-remote-content--button--hover--background-color: $ibo-color-grey-800;
 
 $ibo-activity-panel--tab-toolbar--text-color: $ibo-color-grey-800;
 $ibo-activity-panel--tab-toolbar-action--color: $ibo-color-grey-800;
